[gd_scene load_steps=10 format=2]

[ext_resource path="res://game/player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/checkin/Checkin.gd" type="Script" id=2]
[ext_resource path="res://game/dialog/welcome-to-the-afterlife.ogg" type="AudioStream" id=3]
[ext_resource path="res://game/dialog/idle-kiosk.ogg" type="AudioStream" id=4]
[ext_resource path="res://game/Camera.tscn" type="PackedScene" id=5]
[ext_resource path="res://game/ground/Floor.tscn" type="PackedScene" id=6]
[ext_resource path="res://game/Sun.tscn" type="PackedScene" id=7]
[ext_resource path="res://game/checkin/kiosk.tscn" type="PackedScene" id=8]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 2, 2, 2 )

[node name="Checkin" type="Spatial"]
script = ExtResource( 2 )

[node name="Camera" parent="." instance=ExtResource( 5 )]

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="Sun" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.949064, 0.193416, 0.248732, -0.307845, 0.40097, 0.862818, 0.0671483, -0.89544, 0.440088, 4.78469, 12.11, 5.88169 )
directional_shadow_max_distance = 100.0

[node name="Floor" parent="." instance=ExtResource( 6 )]
collision_layer = 2

[node name="Kiosk" parent="." instance=ExtResource( 8 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -9 )

[node name="KioskArea" type="Area" parent="Kiosk"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.11959e-07, 2, -4 )
collision_layer = 2
input_ray_pickable = false

[node name="CollisionShape" type="CollisionShape" parent="Kiosk/KioskArea"]
shape = SubResource( 1 )

[node name="welcomeSound" type="AudioStreamPlayer3D" parent="Kiosk"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0 )
stream = ExtResource( 3 )
unit_size = 50.0
bus = "Sfx"

[node name="idleSound" type="AudioStreamPlayer3D" parent="Kiosk"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0 )
stream = ExtResource( 4 )
unit_db = -12.0
unit_size = 50.0
autoplay = true
bus = "Sfx"

[connection signal="body_entered" from="Kiosk/KioskArea" to="." method="_on_KioskArea_body_entered"]
[connection signal="body_exited" from="Kiosk/KioskArea" to="." method="_on_KioskArea_body_exited"]
